<resources>
    <string name="app_name">V Carry Motorist</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_home">ActivityHome</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_home">Home</string>
    <string name="nav_trips">Trips</string>
    <string name="nav_accountBalance">Account Balance</string>
    <string name="nav_tripOnOffer">Trip On Offer</string>
    <string name="nav_share">Share</string>
    <string name="nav_sendFeedback">Send Feedback</string>

    <string name="hindi">हिंदी</string>

    <string name="gujarati">ગુજરાતી</string>

    <string name="select_language">Select Language</string>

    <string name="actionbar_title_trips">Trips</string>

    <string name="ongoing_trip">Ongoing Trips</string>
    <string name="book_a_trip">Book a Trip</string>
    <string name="schedule_trip">Schedule a Trip</string>
    <string name="trip_summary">Trip Summary</string>

    <string name="from">From</string>
    <string name="to">To</string>
    <string name="vehicle">Vehicle</string>
    <string name="request_trip">Request Trip</string>

    <string name="transport_request">Transport Request</string>
    <string name="new_request">New Transport Request from V-Carry</string>

    <string name="accept">Accept</string>
    <string name="reject">Reject</string>


    <string name="request_from">From</string>
    <string name="request_to">To</string>

    <string name="time">Time</string>

    <string name="trip_status">Trip Status</string>

    <string name="customer_name">Customer Name</string>

    <string name="trip_time">Trip Time</string>

    <string name="start_trip">Start Trip</string>

    <string name="fare">Trip Fare</string>

    <string name="rs">\u20B9</string>

    <string name="trip_details">Trip Details</string>

    <string name="are_you_sure_start_trip">Are you sure you want to start this Trip?</string>

    <string name="cancel">Cancel</string>

    <string name="start">START</string>
    <string name="stop">STOP</string>

    <string name="please_complete_current_trip">Please complete current Trip</string>

    <string name="stop_trip">STOP TRIP</string>

    <string name="are_you_sure_stop_trip">Are you sure you want to stop this Trip?</string>

    <string name="you_are_on_a_trip">You are on a trip</string>
    <string name="trip_location">Location</string>
    <string name="trip_distance">Trip Distance</string>

    <string name="please_wait">Please Wait</string>

    <string name="generating_trip_details">Generating trip details</string>
    <string name="memo">Memo</string>
    <string name="labour">Labour</string>
    <string name="cash_received">CASH RECEIVED</string>

    <string name="trip_confirm_notification_title">Congratulation!</string>
    <string name="trip_confirm_notification_message">Yor trip is confirmed</string>

    <string name="trip_not_confirm_notification_title">Sorry</string>
    <string name="trip_not_confirm_notification_message">Someone else got the trip</string>

    <string name="ok">OK</string>

    <string name="please_update">Please Update</string>
    <string name="trip_notification">Trip Notification</string>
    <string name="time_lest">Time Left</string>
    <string name="account_summary">Account Summary</string>
    <string name="finish_trip">FINISH TRIP</string>
    <string name="cancel_trip">CANCEL TRIP</string>

    <string name="paid">Received</string>
    <string name="unpaid">Receivable</string>
    <string name="today">Today</string>
    <string name="this_month">This Month</string>
    <string name="total">Total</string>
    <string name="trip_completed">Trip Completed:</string>
    <string name="incomplete_trip">Incomplete:</string>

    <string name="trip_cancel_msg">This trip is not finished, are you sure you want to cancel this trip?</string>
    <string name="service_listening">Listening for Transport Request...</string>
    <string name="clear_offline_data">Clear Offline Data</string>
    <string name="enter_memo_amount">Please Enter Labour Amount</string>
    <string name="enter_labour_amount">Please Enter Memo Amount</string>
    <string name="trips_today">Trips Today</string>
    <string name="trips_this_month">Trips This Month</string>
    <string name="total_trips">Total Trips</string>
    <string name="driver_not_registered">You are not registered</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="not_registered">Sorry, you are not registered with V-Carry</string>
    <string name="feature_coming_soon">Feature Coming Soon</string>
    <string name="enter_cash_received">Please Enter Cash Received</string>
    <string name="finished_trip_details">Finished Trip Details</string>
    <string name="trip_number">Trip Number</string>
    <string name="trip_accepted_successfully">Trip Accepted Successfully</string>
    <string name="wait_for_trip_confirmation">Please wait for confirmation message form V-Carry</string>
    <string name="trip_rejection_prompt_msg">Do you want to Reject this Trip?</string>
    <string name="no_internet">No Internet</string>
    <string name="something_went_wrong">Something went Wrong.</string>
    <string name="n_a">N/A</string>
    <string name="trip_not_found">Sorry, Trip details not found</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_update_from_location">Are you sure you want to update From Shipping Location?</string>
    <string name="are_you_sure_update_to_location">Are you sure you want to update To Shipping Location?</string>
    <string name="getting_location">Getting Your Location...</string>
    <string name="cannot_connect_location_api">Cannot connect to location API</string>
    <string name="updating_location">Updating Location...</string>
    <string name="location_updated_successfully">Location Updated Successfully</string>
    <string name="failed_to_update_location">Failed to update Location</string>
    <string name="from_company_name">From Company Name</string>
    <string name="to_company_name">To Company Name</string>
    <string name="dimension">Dimension</string>
    <string name="weight">Weight</string>
    <string name="not_on_trip">You are not on a Trip.</string>
    <string name="destination_not_available">Destination location not available</string>
    <string name="show_trip_on_map">Show Trip On Map</string>
    <string name="maps_app_not_found">Google Maps Application not found</string>
    <string name="from_not_found">From Location not found</string>
    <string name="total_driver_share">Total Motorist Share</string>
    <string name="driver_premium">Motorist Premium</string>
    <string name="driver_share">Motorist Share</string>
    <string name="discounted_customer_fare">Discounted Customer Fare</string>
    <string name="trip_charges">Trip Charges</string>
    <string name="item">ITEM</string>
    <string name="your_share">YOUR SHARE</string>
    <string name="trip_charges_details">Trip Charges Details</string>
    <string name="fare_details_not_found">Invoice not yet generated, Try again later.</string>
    <string name="fare_details">Fare Details</string>
    <string name="driver_allocated">Motorist Allocated</string>
    <string name="trip_started">Trip Started</string>
    <string name="cancelled_by_motorist">Cancelled By Motorist</string>
    <string name="cancelled_by_customer">Cancelled By Customer</string>
    <string name="cancelled_by_vcarry">Cancelled By Vcarry</string>
    <string name="trip_finished">Trip Finished</string>
    <string name="registered_motorist">You are a registered Motorist.</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="please_wait_you_will_receive_a_otp">Please wait you will receive a OTP in 60 Seconds</string>
    <string name="resend">Resend</string>
    <string name="enter_mobile_no">Enter Mobile No</string>
    <string name="select_country_code">Select Country Code</string>
    <string name="code_not_sent">Code not yet sent. Please wait for OTP.</string>
    <string name="verifying_otp">Verifying OTP...</string>
    <string name="verify_phone">Verifying Phone Number...</string>

    <string name="nav_signOut">Sign Out</string>
    <string name="logout_message">Are you sure you want to logout?</string>

</resources>
