<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_transport_request"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_access_time_grey_100_24dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:textColor="#f5f5f5"
                android:textSize="18sp"
                tools:text="28-wed, 4:30PM"/>

            <TextView
                android:id="@+id/tv_fare"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#f5f5f5"
                android:textSize="28sp"
                tools:text="\u20B9 200"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_vehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/ic_local_shipping_black_18dp"
            android:gravity="center"
            android:textColor="#f5f5f5f5"
            android:textSize="20sp"
            tools:text="@string/vehicle"/>

        <TextView
            android:id="@+id/tv_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_location_on_black_18dp"
            android:drawablePadding="5dp"
            android:textColor="#f5f5f5"
            android:textSize="18sp"
            tools:text="@string/request_from"/>

        <TextView
            android:id="@+id/tv_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_location_on_black_18dp"
            android:drawablePadding="5dp"
            android:textColor="#f5f5f5"
            android:textSize="18sp"
            tools:text="@string/request_to"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_acceptRejectButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_reject"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/reject_btn"
            android:text="@string/reject"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_accept"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/accept_btn"
            android:text="@string/accept"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"/>

    </LinearLayout>


</RelativeLayout>
